# scale-telemetry

./: .dockerignore  .gitignore  CHANGELOG-EMQX.md  CLAUDE.md  DEV_SETUP.md  DOCKER.md  Dockerfile  EMQX.md  Makefile  QUICKSTART.md  README.md  config.env.example  devices.json  docker-compose.dev.yml  docker-compose.yml  docker-run.sh  docker.env.example  entrypoint-dev.sh  pyproject.toml
examples/: README.md  SOCAT_GUIDE.md  mqtt_test_client.py  scale_simulator.py  socat_scale_simulator.sh
logs/: .gitkeep
src/scale_telemetry/: __init__.py  __main__.py  config.py  main.py  mqtt_client.py  serial_reader.py
tests/: test_config.py  test_main.py  test_mqtt_client.py  test_serial_reader.py
